--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "antd": "^5.27.5",
     "i18next": "^25.5.3",
     "next": "15.5.4",
     "next-i18next": "^15.4.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-i18next": "^16.0.0",
-    "react-select": "^5.10.2"
+    "react-i18next": "^16.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -23,7 +23,6 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@types/react-select": "^5.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
     "tailwindcss": "^4",
