--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next-i18next": "^15.4.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-easy-crop": "^5.5.3",
     "react-i18next": "^16.0.0"
   },
   "devDependencies": {
